Finish Menu input alpha, fixed x overflow onon dashboard for mobile causing weird scroll, fixed text overflow on announcements

--- a/colonialsite/assets/css/events/style.css
+++ b/colonialsite/assets/css/events/style.css
@@ -1,6 +1,6 @@
 .scroll-container {
    width:100%;
-   height:80vh;
+   max-height:80vh;
    float:left;
    padding: 10px;
    overflow-y:scroll;
